# code-lens

./: .coverage  .env.example  .gitignore  CodeLens_Project_Specification.md  Dockerfile  HANDOFF.md  NEXTJS_BUILD_PLAN.md  README.md  docker-compose.yml  pyproject.toml  test_connection.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py
cli/: main.py  setup.py
docs/: CodeLens_Project_Specification.md  LIVING_SPEC.md  Team-application-project-requirements.md  multi-tier-project-requirements.md  presentation-layer-spec.md  requirements-alignment.md
docs/decisions/: ADR-001-rule-interpretation-strategy.md  ADR-002-code-discovery-strategy.md  ADR-003-presentation-tier-strategy.md
frontend/: .prettierignore  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: auth.ts  query-provider.tsx
frontend/types/: api.ts
scripts/: benchmark_incremental_mcp.py  seed.cypher
src/codelens/: __init__.py  cli.py  settings.py  watcher.py
streamlit_app/: Home.py  requirements.txt
streamlit_app/lib/: __init__.py  api_client.py  auth.py  prompts.py  styles.py
streamlit_app/pages/: 1_Ask.py  2_Admin_Dashboard.py  3_Admin_Repos.py  4_Admin_Domains.py  5_Admin_Users.py
tests/integration/: test_cli_smoke.py  test_incremental_indexing.py  test_indexer.py  test_mcp_server.py  test_neo4j_client.py
tests/unit/: test_cli.py  test_clustering.py  test_java_parser.py  test_python_parser.py  test_watcher.py
(+57 files in other folders)
