[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens"
version = "0.1.0"
description = "Code intelligence infrastructure for AI agents — indexes codebases into a knowledge graph queryable via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # AST parsing
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",

    # CLI
    "click>=8.1",

    # Graph database
    "neo4j>=5.0",

    # MCP server
    "mcp>=1.0",

    # API server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",

    # LLM (domain summaries)
    "google-genai>=1.0",

    # Utilities
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "neo4j>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
codelens = "codelens.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
